fix(WalletLabel): fix align

--- a/src/components/UserProfile/WalletLabel/styles.module.css
+++ b/src/components/UserProfile/WalletLabel/styles.module.css
@@ -29,7 +29,6 @@
 .dialogContent {
   display: flex;
   flex-direction: column;
-  align-items: center;
   font-size: var(--font-size-sm);
   color: var(--color-grey-darker);
 
